@@ -23,6 +23,7 @@ TODO :
 	mod_neko : log some errors into apache log
 	neko+vm : added perf statistics hooks (-stats)
 	mod_neko : scriptable configuration and statistics
+	regexp : allow more than 10 matches
 
 2007-07-25 : 1.6.0
 	display error message when uncaught exception in neko thread
